# text-vae-nlp

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/: Id16_1p0_pair01.csv  Id16_1p0_pair02.csv  Id16_1p0_pair03.csv  Id32_0p1_pair01.csv  Id32_0p1_pair02.csv  Id32_0p1_pair03.csv  active_units_dim_var_agnews.json  active_units_dim_var_stsb.json  active_units_ld32_b0.1_s42_20260311_001705.json  active_units_per_run.csv  active_units_per_run_agnews.csv  active_units_summary_agnews.csv  active_units_threshold_sweep.csv  active_units_threshold_sweep_agnews.csv  grid_all_raw.csv  pareto_all.csv  pareto_front.csv  phase2_1_geometry_summary.csv  sweet_spot.csv  sweet_spot.json
reports/: 00_phase1_pareto.md  01_phase2_latent.md  README.md
scripts/: active_units.py  eval.py  interp.py  train.py
src/textvae/: eval.py  interp_utils.py  lit_module.py  model.py  train.py
