[project]
name = "textvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.2",
    "gradio>=6.3.0",
    "lightning>=2.6.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.3",
]
